# modbus-demo

./: pyproject.toml
modbus_demo/: Client.py  Detector.py  Server.py  main.py
