[tool.poetry]
name = "modbus-demo"
version = "0.1.0"
description = "Sistema de visão computacional para identificar pessoas e enviar comandos via Modbus para controle de dispositivos."
authors = ["João Paulo Rios <joao.paulo.rios@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymodbus = "^3.7.4"
ultralytics = "^8.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
